2001-06-19  Andreas Jaeger  <aj@suse.de>

	* elf64-x86-64.c (elf64_x86_64_relocate_section): Fix creation of
	dynamic symbols.

2001-06-18  Hans-Peter Nilsson  <hp@axis.com>

	* elflink.h (struct elf_assign_sym_version_info): Remove member
	export_dynamic.  All users changed to use info member.
	NAME(bfd_elf,size_dynamic_sections)): Remove parameter
	export_dynamic, instead use member in parameter info.
	* bfd-in.h (bfd_elf32_size_dynamic_sections,
	bfd_elf64_size_dynamic_sections): Update prototype.
	* bfd-in2.h: Regenerate.

2001-06-18  H.J. Lu  <hjl@gnu.org>

	* elflink.h (elf_info_failed): Add a new field, verdefs.
	(NAME(bfd_elf,size_dynamic_sections): Pass verdefs to
	elf_export_symbol.
	(elf_export_symbol): Check eif->verdefs to decide if a symbol
	should be exported.

2001-06-17  H.J. Lu  <hjl@gnu.org>

	* elf32-mips.c (mips_elf_link_hash_entry): Add a new field,
	readonly_reloc, to record if a relocation in the .rel.dyn
	section is against a read-only section. 
	(mips_elf_link_hash_newfunc): Initialize the readonly_reloc
	field to false.
	(_bfd_mips_elf_check_relocs): Record if there is a relocation
	in the .rel.dyn section against a read-only section by setting
	DF_TEXTREL or readonly_reloc.
	(_bfd_mips_elf_copy_indirect_symbol): Copy readonly_reloc if
	it is true.
	(_bfd_mips_elf_adjust_dynamic_symbol): Record DF_TEXTREL if
	there is a relocation in the .rel.dyn section against a
	read-only section.
	(_bfd_mips_elf_size_dynamic_sections): Set DT_TEXTREL if
	DF_TEXTREL is set.

2001-06-12  Nick Clifton  <nickc@cambridge.redhat.com>

	* coffcode.h (styp_flags_to_sec_flags): Change to a boolean
	function.  Move flagword result into parameter list.  Remove
	comment about setting bfd_error_handler to intercept failure
	results.
        * coffgen.c (make_a_section_from_file): Examine result of
	calling bfd_coff_styp_to_sec_flags and pass a failure back to
	caller.
        * ecoff.h (styp_flags_to_sec_flags): Change to a boolean